--- a/.eslintrc
+++ b/.eslintrc
@@ -7,9 +7,12 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": 0
+    "no-console": 0,
+    "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-explicit-any": 0
   }
 }
