--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "test": "npx jest --forceExit --runInBand --detectOpenHandles --colors --verbose --reporters=default",
-    "test:ci": "npx jest --ci --runInBand --silent --colors --coverage"
+    "test:ci": "npx jest --forceExit --ci --runInBand --silent --colors --coverage"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +25,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "5.10.1",
     "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.21.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.24.0",
