--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "5.10.1",
     "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.21.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.24.0",
@@ -45,16 +45,22 @@
     "@types/validator": "^13.1.3",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "compression": "^1.7.4",
     "connect-mongodb-session": "^2.4.1",
     "cors": "^2.8.5",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "memorystore": "^1.6.6",
     "mongoose": "5.10.1",
+    "prettier": "^2.2.1",
     "querystring": "^0.2.1",
+    "routing-controllers": "^0.9.0",
     "validator": "^13.5.2"
   }
 }
