--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "MONGO_PORT=27018 MONGO_HOST=0.0.0.0 nodemon",
+    "start:dev": "nodemon",
     "build": "NODE_ENV=production tsc",
     "start": "NODE_ENV=production node dist/server.js",
     "lint": "eslint . --ext .ts",
